--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "homepage": "https://github.com/dominikclemente/coinflip-dapp#readme",
   "dependencies": {
-    "truffle-assertions": "^0.9.2"
+    "@truffle/hdwallet-provider": "^1.0.32",
+    "truffle-assertions": "^0.9.2",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^1.2.6"
   }
 }
