--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dominikclemente/coinflip-dapp#readme",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.0.32",
+    "install": "^0.13.0",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.2.6"
