--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.0.32",
     "install": "^0.13.0",
+    "truffle": "^5.1.16",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.2.6"
